// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Projects renders correctly with a single item 1`] = `
.c0 {
  padding-top: 5rem;
  padding-bottom: 5rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c11 {
  display: flex;
  gap: 0.5rem;
  flex-wrap: wrap;
  margin-bottom: 1.5rem;
}

.c6 {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 1.5rem;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  color: var(--color-headline);
  margin: 0;
  font-size: 2.5rem;
  line-height: 1.1;
}

.c13 {
  color: var(--color-highlight);
  text-decoration: none;
  font-size: 1rem;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c13:hover {
  color: var(--color-tertiary);
}

.c13:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c9 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c12 {
  border: 1px solid var(--color-highlight);
  background: var(--color-badge-bg);
  color: var(--color-paragraph);
  border-radius: 9999px;
  display: inline-block;
  font-size: 0.75rem;
  padding: 0.25rem 0.5rem;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: var(--color-highlight);
  margin: 0 0 1.25rem;
}

.c5 {
  margin: 0 0 3rem;
  max-width: 600px;
}

.c7 {
  position: relative;
  display: flex;
  flex-direction: column;
  padding: 3rem 2rem;
  border: 1px solid var(--color-main);
  border-radius: 10px;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  overflow: hidden;
}

.c7::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 3px;
  background: linear-gradient(90deg, var(--color-ring-start), var(--color-ring-end));
  opacity: 0;
  transition: opacity 0.2s ease;
}

.c7:hover {
  border-color: var(--color-highlight);
  box-shadow: 0 4px 24px var(--color-surface);
}

.c7:hover::before {
  opacity: 1;
}

.c8 {
  margin: 0 0 0.75rem;
}

.c10 {
  margin-bottom: 1.5rem;
  flex: 1;
}

.c15 {
  font-size: 0.75rem;
  color: var(--color-secondary);
  letter-spacing: 0.1em;
  text-transform: uppercase;
  align-self: flex-start;
}

.c14 {
  font-size: 0.875rem;
  font-weight: 700;
  align-self: flex-start;
}

.c14:hover {
  text-decoration: underline;
}

.c14::after {
  content: "";
  position: absolute;
  inset: 0;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 600px) {
  .c6 {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media (min-width: 900px) {
  .c6 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1200px) {
  .c6 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1536px) {
  .c6 {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

<div>
  <section
    class="c0"
    id="projects"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        Projects
      </p>
      <h2
        class="c4 c5"
      >
        What I've built
      </h2>
      <div
        class="c6 "
      >
        <article
          class="c7"
        >
          <h3
            class="c8"
          >
            7mesh
          </h3>
          <p
            class="c9 c10"
          >
            Long-term core developer on the headless storefront of 7mesh.com, a premium cycling apparel brand. Built PDP and PLP with faceted filtering, Algolia search, cart, and a full account section. Performance and WCAG 2.1 AA accessibility improvements ongoing since 2022.
          </p>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Next.js
            </span>
            <span
              class="c12"
            >
              TypeScript
            </span>
            <span
              class="c12"
            >
              Shopify
            </span>
            <span
              class="c12"
            >
              Prismic
            </span>
            <span
              class="c12"
            >
              Algolia
            </span>
            <span
              class="c12"
            >
              Storybook
            </span>
          </div>
          <a
            aria-label="View project: 7mesh"
            class="c13 c14"
            href="https://www.7mesh.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            View project →
          </a>
        </article>
        <article
          class="c7"
        >
          <h3
            class="c8"
          >
            Compass
          </h3>
          <p
            class="c9 c10"
          >
            Core contributor and maintainer of JIBE's internal design system, powering all of its headless ecommerce storefronts. Built core components, led React 19 and Next.js upgrade discovery, and strengthened tooling with Chromatic visual regression and automated dependency pipelines.
          </p>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              React
            </span>
            <span
              class="c12"
            >
              TypeScript
            </span>
            <span
              class="c12"
            >
              Storybook
            </span>
            <span
              class="c12"
            >
              styled-components
            </span>
            <span
              class="c12"
            >
              Chromatic
            </span>
          </div>
          <span
            class="c15"
          >
            — 
            internal
          </span>
        </article>
      </div>
    </section>
  </section>
</div>
`;

exports[`Projects renders correctly with full project list 1`] = `
.c0 {
  padding-top: 5rem;
  padding-bottom: 5rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c11 {
  display: flex;
  gap: 0.5rem;
  flex-wrap: wrap;
  margin-bottom: 1.5rem;
}

.c6 {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 1.5rem;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  color: var(--color-headline);
  margin: 0;
  font-size: 2.5rem;
  line-height: 1.1;
}

.c13 {
  color: var(--color-highlight);
  text-decoration: none;
  font-size: 1rem;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c13:hover {
  color: var(--color-tertiary);
}

.c13:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c9 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c12 {
  border: 1px solid var(--color-highlight);
  background: var(--color-badge-bg);
  color: var(--color-paragraph);
  border-radius: 9999px;
  display: inline-block;
  font-size: 0.75rem;
  padding: 0.25rem 0.5rem;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: var(--color-highlight);
  margin: 0 0 1.25rem;
}

.c5 {
  margin: 0 0 3rem;
  max-width: 600px;
}

.c7 {
  position: relative;
  display: flex;
  flex-direction: column;
  padding: 3rem 2rem;
  border: 1px solid var(--color-main);
  border-radius: 10px;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  overflow: hidden;
}

.c7::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 3px;
  background: linear-gradient(90deg, var(--color-ring-start), var(--color-ring-end));
  opacity: 0;
  transition: opacity 0.2s ease;
}

.c7:hover {
  border-color: var(--color-highlight);
  box-shadow: 0 4px 24px var(--color-surface);
}

.c7:hover::before {
  opacity: 1;
}

.c8 {
  margin: 0 0 0.75rem;
}

.c10 {
  margin-bottom: 1.5rem;
  flex: 1;
}

.c15 {
  font-size: 0.75rem;
  color: var(--color-secondary);
  letter-spacing: 0.1em;
  text-transform: uppercase;
  align-self: flex-start;
}

.c14 {
  font-size: 0.875rem;
  font-weight: 700;
  align-self: flex-start;
}

.c14:hover {
  text-decoration: underline;
}

.c14::after {
  content: "";
  position: absolute;
  inset: 0;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 600px) {
  .c6 {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media (min-width: 900px) {
  .c6 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1200px) {
  .c6 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1536px) {
  .c6 {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

<div>
  <section
    class="c0"
    id="projects"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        Projects
      </p>
      <h2
        class="c4 c5"
      >
        What I've built
      </h2>
      <div
        class="c6 "
      >
        <article
          class="c7"
        >
          <h3
            class="c8"
          >
            7mesh
          </h3>
          <p
            class="c9 c10"
          >
            Long-term core developer on the headless storefront of 7mesh.com, a premium cycling apparel brand. Built PDP and PLP with faceted filtering, Algolia search, cart, and a full account section. Performance and WCAG 2.1 AA accessibility improvements ongoing since 2022.
          </p>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Next.js
            </span>
            <span
              class="c12"
            >
              TypeScript
            </span>
            <span
              class="c12"
            >
              Shopify
            </span>
            <span
              class="c12"
            >
              Prismic
            </span>
            <span
              class="c12"
            >
              Algolia
            </span>
            <span
              class="c12"
            >
              Storybook
            </span>
          </div>
          <a
            aria-label="View project: 7mesh"
            class="c13 c14"
            href="https://www.7mesh.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            View project →
          </a>
        </article>
        <article
          class="c7"
        >
          <h3
            class="c8"
          >
            Compass
          </h3>
          <p
            class="c9 c10"
          >
            Core contributor and maintainer of JIBE's internal design system, powering all of its headless ecommerce storefronts. Built core components, led React 19 and Next.js upgrade discovery, and strengthened tooling with Chromatic visual regression and automated dependency pipelines.
          </p>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              React
            </span>
            <span
              class="c12"
            >
              TypeScript
            </span>
            <span
              class="c12"
            >
              Storybook
            </span>
            <span
              class="c12"
            >
              styled-components
            </span>
            <span
              class="c12"
            >
              Chromatic
            </span>
          </div>
          <span
            class="c15"
          >
            — 
            internal
          </span>
        </article>
        <article
          class="c7"
        >
          <h3
            class="c8"
          >
            Nest Designs
          </h3>
          <p
            class="c9 c10"
          >
            Core developer on a headless Shopify storefront for a premium baby and kids sleepwear brand. Built an interactive size guide, faceted search with preserved scroll, BOPIS availability, and multi-currency support for AUD/GBP market launches.
          </p>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Next.js
            </span>
            <span
              class="c12"
            >
              TypeScript
            </span>
            <span
              class="c12"
            >
              Shopify
            </span>
            <span
              class="c12"
            >
              Prismic
            </span>
            <span
              class="c12"
            >
              Algolia
            </span>
            <span
              class="c12"
            >
              Klaviyo
            </span>
          </div>
          <a
            aria-label="View project: Nest Designs"
            class="c13 c14"
            href="https://www.nestdesigns.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            View project →
          </a>
        </article>
        <article
          class="c7"
        >
          <h3
            class="c8"
          >
            leggings.com
          </h3>
          <p
            class="c9 c10"
          >
            Frontend development of the multi-vendor marketplace apps for leggings.com, in partnership with Orium. Built the merchant app for brand and product management and the admin app for moderation, smart collections, and category management.
          </p>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Shopify
            </span>
            <span
              class="c12"
            >
              Remix
            </span>
            <span
              class="c12"
            >
              Prisma
            </span>
            <span
              class="c12"
            >
              Shopify Polaris
            </span>
            <span
              class="c12"
            >
              TypeScript
            </span>
          </div>
          <span
            class="c15"
          >
            — 
            pre-launch
          </span>
        </article>
        <article
          class="c7"
        >
          <h3
            class="c8"
          >
            Kizi.nl
          </h3>
          <p
            class="c9 c10"
          >
            Frontend architect and developer of Kizi.nl, Overstappen.nl's consumer comparison platform. Designed the stack alongside the CTO, built the site and app integrations, and coordinated developers and design decisions.
          </p>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Next.js
            </span>
            <span
              class="c12"
            >
              TypeScript
            </span>
            <span
              class="c12"
            >
              Redux
            </span>
            <span
              class="c12"
            >
              Storybook
            </span>
            <span
              class="c12"
            >
              Jest
            </span>
            <span
              class="c12"
            >
              Azure DevOps
            </span>
          </div>
          <a
            aria-label="View project: Kizi.nl"
            class="c13 c14"
            href="https://www.kizi.nl/"
            rel="noopener noreferrer"
            target="_blank"
          >
            View project →
          </a>
        </article>
        <article
          class="c7"
        >
          <h3
            class="c8"
          >
            FCA Build & Price
          </h3>
          <p
            class="c9 c10"
          >
            Built and maintained the Build & Price vehicle configurator for FCA Group's North American brand sites — Chrysler, Dodge, Jeep, Ram, Fiat and Alfa Romeo. Nearly three years of feature development on a high-traffic consumer tool with real-time pricing and availability.
          </p>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              React
            </span>
            <span
              class="c12"
            >
              Redux
            </span>
            <span
              class="c12"
            >
              JavaScript
            </span>
            <span
              class="c12"
            >
              Webpack
            </span>
            <span
              class="c12"
            >
              Node.js
            </span>
          </div>
          <a
            aria-label="View project: FCA Build & Price"
            class="c13 c14"
            href="https://www.ramtrucks.com/en/lineup/?app=bmo&"
            rel="noopener noreferrer"
            target="_blank"
          >
            View project →
          </a>
        </article>
      </div>
    </section>
  </section>
</div>
`;
